erDiagram
    USERS {
        string id PK "ULID. Example: 01HXYZ123ABC"
        string firebase_uid UK "Firebase UID. Example: qweRtY12345"
        string email UK "Login email. Example: parent@example.com"
        string display_name "Public name. Example: Alex P."
        string billing_customer_id "Stripe customer. Example: cus_1234"
        string settings_json "Account prefs JSON. Example: {'locale':'en-GB'}"
        int created_at "Epoch ms created. Example: 1718035200000"
        int updated_at "Epoch ms updated. Example: 1718640000000"
    }

    CHILDREN {
        string id PK "ULID. Example: 01HCHILDABC"
        string alias "Pseudonymous display. Example: Explorer Fox"
        string given_name "Legal given name (optional). Example: Charlie"
        string family_name "Legal family name (optional). Example: Smith"
        string preferred_name "What the child prefers to be called (optional). Example: Charlie"
        string short_name "Short UI name (explicit). Example: Char"
        string nickname "Colloquial nickname (explicit). Example: Champ"
        string email UK "Internal routing email only; not deliverable. Example: child_01HCHILDABC@internal"
        string avatar_asset_id FK "FK → assets.id (optional avatar image)"
        string locale "Child content locale (optional). Example: en-GB"
        int dob "Epoch ms (UTC midnight) for date of birth"
        int created_at "Epoch ms created"
        int updated_at "Epoch ms updated"
        int deleted_at "Epoch ms soft delete (nullable)"
    }

    CHILD_ACCESS {
        string id PK "ULID. Example: 01HACCESSXYZ"
        string child_id FK "FK → children.id"
        string user_id FK "FK → users.id (member)"
        string persona_role "parent|tutor|teacher|family. Example: parent"
        string access_level "parent|teacher|tutor|family"
        boolean is_primary_parent "True only for primary parent membership"
        string invited_by_user_id FK "FK → users.id (inviter)"
        int revoked_at "Epoch ms revoked (nullable)"
        int created_at "Epoch ms created"
        int updated_at "Epoch ms updated"
    }

    ACCESS_REQUESTS {
        string id PK "ULID. Example: 01HREQ123"
        string requester_user_id FK "FK → users.id (requester)"
        string target_parent_user_id FK "FK → users.id (nullable)"
        string target_parent_email "Email when parent unknown"
        string target_child_id FK "FK → children.id (nullable)"
        string desired_persona_role "parent|tutor|teacher|family"
        string desired_access_level "parent|teacher|tutor|family"
        string status "pending|approved|declined|expired|canceled"
        string token UK "Single-use HMAC token"
        int expires_at "Epoch ms expiry"
        string message "Optional short message"
        int created_at "Epoch ms created"
        int updated_at "Epoch ms updated"
        int acted_at "Epoch ms acted (nullable)"
        string acted_by_user_id FK "FK → users.id (nullable)"
    }

    USER_SUBSCRIPTIONS {
        string id PK "ULID. Example: 01HSUBABC"
        string user_id FK "FK → users.id"
        string provider "stripe"
        string provider_customer_id "Stripe customer. Example: cus_1234"
        string provider_subscription_id UK "Stripe sub. Example: sub_1234"
        string plan_id FK "FK → subscription_plans.id"
        string status "trialing|active|past_due|canceled|incomplete|incomplete_expired"
        int current_period_end "Epoch ms period end"
        boolean cancel_at_period_end "True if will cancel at period end"
        int created_at "Epoch ms created"
        int updated_at "Epoch ms updated"
    }

    SUBSCRIPTION_PLANS {
        string id PK "ULID. Example: plan_free"
        string key UK "Unique code. Example: basic_monthly"
        string title "Display name"
        string description "Optional marketing copy"
        string interval "day|week|month|year"
        int interval_count "Multiplier (default 1)"
        string currency "ISO 4217 (e.g., GBP)"
        int amount_cents "Price in minor units"
        int trial_days "Optional free trial days"
        string features_json "JSON entitlements/limits"
        string provider_product_id "Stripe product id"
        string provider_price_id "Stripe price id"
        string status "active|archived"
        int created_at "Epoch ms created"
        int updated_at "Epoch ms updated"
    }

    CONSENT_POLICIES {
        string id PK "ULID. Example: 01HCONSPL1"
        string group_key UK "e.g., terms_of_service, privacy_policy"
        int version "Policy version"
        string title "Display title"
        string locale "e.g., en-GB"
        string asset_id FK "FK → assets.id (policy document)"
        string status "draft|active|archived"
        int effective_at "Epoch ms (nullable)"
        int created_at "Epoch ms created"
        int updated_at "Epoch ms updated"
    }

    USER_CONSENTS {
        string id PK "ULID. Example: 01HUSERCONS1"
        string user_id FK "FK → users.id"
        string policy_id FK "FK → consent_policies.id"
        string group_key "Denormalised group key"
        int version "Accepted policy version"
        int accepted_at "Epoch ms accepted"
        int created_at "Epoch ms created"
        int updated_at "Epoch ms updated"
    }

    CHILD_PROFILE {
        string id PK "ULID profile"
        string child_id FK "FK → children.id"
        string created_by_user_id FK "FK → users.id (collector/author); one active profile per (child, user)"
        string updated_by_user_id FK "FK → users.id (last editor, nullable)"
        boolean authored_by_child "True when content was entered by the child during session"
        string persona_role "parent|tutor|teacher|family"
        string status "active|archived"
        string learning_style "story|visual|puzzle|experiment"
        string profile_summary "Short sanitized summary in natural language. Example: Loves LEGO & space and story games."
        string sensitivities "Free-text notes on sensitivities or conditions that affect learning. Example: Sensitive to loud sounds in busy rooms."
        string profile_summary_tags_json "JSON array of tags derived from summary. Example: ['visual','puzzles','stories']"
        string sensitivities_tags_json "JSON array of tags for sensitivities. Example: ['loud_sounds','rushing','tiny_print']"
        int created_at "Epoch ms created"
        int updated_at "Epoch ms updated"
    }

    CHILD_PROFILE_ITEMS {
        string id PK "ULID item"
        string profile_id FK "FK → child_profile.id"
        string type "interest|book|movie|game|activity"
        string value "Display title for the item. Example: 'The Gruffalo', 'Coco', 'Acting out stories'"
        string description "Optional longer description, often first-person for child-authored items."
        string preference "like|dislike|neutral"
        string tags_json "JSON array of tags for categorisation. Example: ['book','bedtime','funny']"
        string resource_url "Optional external URL for the resource (e.g., Wikipedia page for a book/movie)."
        int created_at "Epoch ms created"
    }

    CHILD_OBSERVATIONS {
        string id PK "ULID observation"
        string child_id FK "FK → children.id"
        string user_id FK "FK → users.id (author)"
        string note_type "observation|wellbeing|progress|other"
        string body "Sanitized short note"
        string status "active|superseded|archived"
        string superseded_by_observation_id FK "FK → child_observations.id (nullable)"
        int created_at "Epoch ms created"
        int updated_at "Epoch ms updated"
    }

    ASSETS {
        string id PK "ULID. Example: 01HASSETABC"
        %% owner_child_id removed; assets are not owned by a child
        string type "image|pdf|stroke_blob|task_definition|ocr_text"
        string r2_bucket "R2 bucket name"
        string r2_key "R2 object key"
        string mime_type "MIME type. Example: image/png"
        int size_bytes "Object size in bytes"
        string checksum_sha256 "Hex checksum for integrity"
        int created_at "Epoch ms created"
    }

    USERS ||--o{ CHILD_ACCESS : has
    CHILDREN ||--o{ CHILD_ACCESS : memberships
    USERS ||--o{ ACCESS_REQUESTS : requests
    USERS ||--o{ USER_SUBSCRIPTIONS : subscribes
    SUBSCRIPTION_PLANS ||--o{ USER_SUBSCRIPTIONS : chosen_plan
    USERS ||--o{ USER_CONSENTS : accepts
    CONSENT_POLICIES ||--o{ USER_CONSENTS : current

    CHILDREN ||--o{ CHILD_PROFILE : profiles
    USERS ||--o{ CHILD_PROFILE : authored
    USERS ||--o{ CHILD_PROFILE : edited
    CHILD_PROFILE ||--o{ CHILD_PROFILE_ITEMS : items

    CHILDREN ||--o{ CHILD_OBSERVATIONS : observations
    USERS ||--o{ CHILD_OBSERVATIONS : authored
    ASSETS ||--o{ CHILDREN : avatar
